--- a/GalsPanic/GalsPanic/GalsPanic.vcxproj
+++ b/GalsPanic/GalsPanic/GalsPanic.vcxproj
@@ -140,12 +140,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="cGame.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="FunctionLibrary.h" />
     <ClInclude Include="GalsPanic.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="cGame.cpp" />
+    <ClCompile Include="FunctionLibrary.cpp" />
     <ClCompile Include="GalsPanic.cpp" />
   </ItemGroup>
   <ItemGroup>
