--- a/C++ practice/C++ practice/C++ practice.vcxproj
+++ b/C++ practice/C++ practice/C++ practice.vcxproj
@@ -160,7 +160,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="0814.1 Dijkstra.cpp" />
+    <ClCompile Include="0818.1 A star.cpp" />
     <ClCompile Include="class\AVL.cpp" />
     <ClCompile Include="class\biTree.cpp" />
     <ClCompile Include="class\GeometricObject\Circle.cpp" />
