--- a/pokemon/pokemon/pokemon.vcxproj.filters
+++ b/pokemon/pokemon/pokemon.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="cUI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cJSONParser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -68,6 +71,12 @@
     <ClCompile Include="cUI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FunctionLibrary.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cJSONParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="pokemon.rc">
@@ -81,5 +90,8 @@
     <Image Include="pokemon.ico">
       <Filter>Resource Files</Filter>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
