--- a/test/test/test.vcxproj
+++ b/test/test/test.vcxproj
@@ -146,11 +146,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cSample.h" />
+    <ClInclude Include="FunctionLibrary.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cSample.cpp" />
+    <ClCompile Include="FunctionLibrary.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="test.cpp" />
   </ItemGroup>
