--- a/test/test/test.vcxproj.filters
+++ b/test/test/test.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="cSample.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FunctionLibrary.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="cSample.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FunctionLibrary.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
