--- a/vector_practice/vector_practice/vector_practice.vcxproj
+++ b/vector_practice/vector_practice/vector_practice.vcxproj
@@ -145,14 +145,16 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="cMatrix.h" />
     <ClInclude Include="cVector3.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="cMatrix.cpp" />
     <ClCompile Include="cVector3.cpp" />
+    <ClCompile Include="matrix_practice.cpp" />
     <ClCompile Include="stdafx.cpp" />
-    <ClCompile Include="vector_practice.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
