--- a/vector_practice/vector_practice/vector_practice.vcxproj.filters
+++ b/vector_practice/vector_practice/vector_practice.vcxproj.filters
@@ -27,15 +27,21 @@
     <ClInclude Include="cVector3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cMatrix.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="vector_practice.cpp">
+    <ClCompile Include="cVector3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="cVector3.cpp">
+    <ClCompile Include="cMatrix.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="matrix_practice.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
