--- a/vector_practice/vector_practice/vector_practice.vcxproj.filters
+++ b/vector_practice/vector_practice/vector_practice.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClCompile Include="vector_practice.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="matrix_practice.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
