--- a/C++ practice/C++ practice/C++ practice-DESKTOP-RC8S5LR.vcxproj
+++ b/C++ practice/C++ practice/C++ practice-DESKTOP-RC8S5LR.vcxproj
@@ -161,7 +161,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="0923 multithreading.cpp" />
+    <ClCompile Include="0923 question.cpp" />
     <ClCompile Include="class\AVL.cpp" />
     <ClCompile Include="class\biTree.cpp" />
     <ClCompile Include="class\cDijkstra.cpp" />
