--- a/DX3D/DX3D/DX3D.vcxproj
+++ b/DX3D/DX3D/DX3D.vcxproj
@@ -145,26 +145,24 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="cBodyPart.h" />
-    <ClInclude Include="cCamera.h" />
-    <ClInclude Include="cCharacter.h" />
-    <ClInclude Include="cDeviceManager.h" />
+    <ClInclude Include="cCamera2.h" />
+    <ClInclude Include="cCubePC.h" />
     <ClInclude Include="cGrid.h" />
+    <ClInclude Include="cGrid2.h" />
     <ClInclude Include="cMainGame.h" />
-    <ClInclude Include="cCube.h" />
+    <ClInclude Include="cPyramid.h" />
     <ClInclude Include="DX3D.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="cBodyPart.cpp" />
-    <ClCompile Include="cCamera.cpp" />
-    <ClCompile Include="cCharacter.cpp" />
+    <ClCompile Include="cCamera2.cpp" />
+    <ClCompile Include="cCubePC.cpp" />
     <ClCompile Include="cDeviceManager.cpp" />
-    <ClCompile Include="cGrid.cpp" />
+    <ClCompile Include="cGrid2.cpp" />
     <ClCompile Include="cMainGame.cpp" />
-    <ClCompile Include="cCube.cpp" />
+    <ClCompile Include="cPyramid.cpp" />
     <ClCompile Include="DX3D.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
