--- a/DX3D/DX3D/DX3D.vcxproj.filters
+++ b/DX3D/DX3D/DX3D.vcxproj.filters
@@ -33,22 +33,19 @@
     <ClInclude Include="cMainGame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="cDeviceManager.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="cCamera.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="cCube.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="cGrid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="cCharacter.h">
+    <ClInclude Include="cCamera2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="cBodyPart.h">
+    <ClInclude Include="cCubePC.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cGrid2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cPyramid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -65,19 +62,16 @@
     <ClCompile Include="cDeviceManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="cCamera.cpp">
+    <ClCompile Include="cCamera2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="cCube.cpp">
+    <ClCompile Include="cCubePC.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="cGrid.cpp">
+    <ClCompile Include="cPyramid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="cCharacter.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="cBodyPart.cpp">
+    <ClCompile Include="cGrid2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
