베지어곡선 지름길 생성

--- a/DX3D/DX3D/DX3D.vcxproj
+++ b/DX3D/DX3D/DX3D.vcxproj
@@ -149,11 +149,13 @@
     <ClInclude Include="cCamera2.h" />
     <ClInclude Include="cCharacter.h" />
     <ClInclude Include="cCubeMan.h" />
+    <ClInclude Include="cCubeMan2.h" />
     <ClInclude Include="cCubeNode.h" />
     <ClInclude Include="cCubePC.h" />
     <ClInclude Include="cCubePNT.h" />
     <ClInclude Include="cDirectionalLight.h" />
     <ClInclude Include="cGrid2.h" />
+    <ClInclude Include="cGuideline.h" />
     <ClInclude Include="cHead.h" />
     <ClInclude Include="cLeftArm.h" />
     <ClInclude Include="cLeftLeg.h" />
@@ -174,12 +176,14 @@
     <ClCompile Include="cCamera2.cpp" />
     <ClCompile Include="cCharacter.cpp" />
     <ClCompile Include="cCubeMan.cpp" />
+    <ClCompile Include="cCubeMan2.cpp" />
     <ClCompile Include="cCubeNode.cpp" />
     <ClCompile Include="cCubePC.cpp" />
     <ClCompile Include="cCubePNT.cpp" />
     <ClCompile Include="cDeviceManager.cpp" />
     <ClCompile Include="cDirectionalLight.cpp" />
     <ClCompile Include="cGrid2.cpp" />
+    <ClCompile Include="cGuideline.cpp" />
     <ClCompile Include="cHead.cpp" />
     <ClCompile Include="cLeftArm.cpp" />
     <ClCompile Include="cLeftLeg.cpp" />
